1998-07-24  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: No longer requiring
	`GNOME_LIBGTOP_SYSDEPS'.

Fri Jul 24 00:45:38 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (MACROS): Added linger.m4.
	* linger.m4: New file.

Thu Jul 23 22:41:23 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (MACROS): Added gnome-undelfs.m4, gnome-vfs.m4.
	* gnome-undelfs.m4: New file.
	* gnome-vfs.m4: New file.

1998-07-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-fileutils.m4: Added some reasonable defaults to allow
	cross compiling; removed `mountlist.o' and `fsusage.o' from
	LIBOBJS.

Tue Jul 21 23:44:53 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-guile-checks.m4: If no build-guile, link against readline
	before termcap.

1998-07-15  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (MACROS): Add `need-declaration.m4'.

	* gnome-support.m4 (AC_REPLACE_FUNCS): Add memmove, strtod,
	strtol, strtoul.
	(GCC_NEED_DECLARATIONS): New check.  Check whether `gethostname'
	needs to be declared.

	* need-declaration.m4: New file.  Stolen from EGCS.

1998-07-13  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (AC_REPLACE_FUNCS): Add check for `mkstemp'.

Wed Jul  1 13:50:39 1998  Scott D. Heavner  <sdh@po.cwru.edu>

	* curses.m4: add some docs and start using with tcd

1998-06-29  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (MACROS): Add all the `.m4' files here.

Mon Jun 29 11:12:04 1998  Scott D. Heavner  <sdh@po.cwru.edu>

	* curses.m4: Need AC_SUBST(CURSES_INCLUDEDIR) not CURSES_INCLUDES

Mon Jun 29 10:35:22 1998  Scott D. Heavner  <sdh@po.cwru.edu>

	* curses.m4: rm conftext* should read rm conftest*, was leaving 
	conftest.c files around.

1998-06-27  Christopher Blizzard  <blizzard@foo.appliedtheory.com>

	* gnome-objc-checks.m4: Use egcs if it's available.  The gcc that
	ships with RedHat 5.1 doesn't do objc, egcs does.

Fri Jun 26 14:36:08 1998  Scott D. Heavner  <sdh@po.cwru.edu>
